1. Collection API Улучшения[#227311]