@@ -3,6 +3,7 @@ package ru.job4j.collection;
 import org.junit.Test;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 import static org.hamcrest.Matchers.greaterThan;
 import static org.hamcrest.Matchers.lessThan;
@@ -12,49 +13,59 @@ import static org.junit.Assert.assertThat;
 public class JobTest {
     @Test
     public void whenAscByName() {
-        List<Job> jobs = new ArrayList<>();
-        jobs.add(new Job("сон", 1));
-        jobs.add(new Job("обучение", 3));
-        Collections.sort(jobs, new JobAscByName());
-        assertThat(jobs, is(Arrays.asList(
+        List<Job> result = new ArrayList<>(List.of(
+                new Job("сон", 1),
+                new Job("обучение", 3)
+
+        ));
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("обучение", 3),
                 new Job("сон", 1)
-        )));
+        ));
+        result.sort(new JobAscByName());
+        assertThat(result, is(expected));
     }
 
     @Test
     public void whenDescByName() {
-        List<Job> jobs = new ArrayList<>();
-        jobs.add(new Job("кино", 1));
-        jobs.add(new Job("стирка", 3));
-        Collections.sort(jobs, new JobDescByName());
-        assertThat(jobs, is(Arrays.asList(
+        List<Job> result = new ArrayList<>(List.of(
+                new Job("кино", 1),
+                new Job("стирка", 3)
+        ));
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("стирка", 3),
                 new Job("кино", 1)
-        )));
+        ));
+        result.sort(new JobDescByName());
+        assertThat(result, is(expected));
     }
+
     @Test
     public void whenAscByPriority() {
-        List<Job> jobs = new ArrayList<>();
-        jobs.add(new Job("работа", 3));
-        jobs.add(new Job("отдых", 1));
-        Collections.sort(jobs, new JobAscByPriority());
-        assertThat(jobs, is(Arrays.asList(
+        List<Job> result = new ArrayList<>(List.of(
+                new Job("работа", 3),
+                new Job("отдых", 1)
+        ));
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("отдых", 1),
                 new Job("работа", 3)
-        )));
+        ));
+        result.sort(new JobAscByPriority());
+        assertThat(result, is(expected));
     }
 
     @Test
     public void whenDescByPriority() {
-        List<Job> jobs = new ArrayList<>();
-        jobs.add(new Job("охота", 1));
-        jobs.add(new Job("рыбалка", 2));
-        Collections.sort(jobs, new JobDescByPriority());
-        assertThat(jobs, is(Arrays.asList(
+        List<Job> result = new ArrayList<>(List.of(
+                new Job("охота", 1),
+                new Job("рыбалка", 2)
+        ));
+        List<Job> expected = new ArrayList<>(List.of(
                 new Job("рыбалка", 2),
                 new Job("охота", 1)
-        )));
+        ));
+        result.sort(new JobDescByPriority());
+        assertThat(result, is(expected));
     }
 
     @Test
